fix(css): Implementa overflow-wrap: break-word para quebrar números longos sem quebrar a palavra 'Reais'

--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ body {
   height: 100vh;
 
   overflow-x: hidden;
-  padding: 1rem;
+  padding-bottom: 3.5rem;
 
   background-image: url("./img/background.jpg");
   background-repeat: no-repeat;
@@ -151,7 +151,7 @@ footer {
 
 .show-result {
   display: block;
-  border-radius: 1rem;
+  border-radius: 1.5rem;
 }
 
 footer span {
@@ -167,7 +167,8 @@ footer h1 {
   font-weight: 700;
   font-size: 2rem;
   line-height: 3rem;
-  word-break: break-all;
+  align-items: center;
+  overflow-wrap: break-word;
 }
 
 /* --- Estilo para loading --- */
